auth0 falta login logout y status
